[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/enemy/BarcoEnemy.gd" type="Script" id=1]
[ext_resource path="res://graphics/enemy/barco2.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemy/CanhaoEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[node name="BarcoEnemy" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Z Index" ]
hp = 15
score = 0
maxVelocidade = 30

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "normal"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -12.4623, -39.2726, -0.0357971, -58.9291, 12.8426, -38.3689, 13.0685, 39.5792, 0.19014, 58.106, -12.0104, 39.3533 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( 0, 1.07717 )
scale = Vector2( 1, 5.20784 )
rect = Rect2( -10, -10, 20, 20 )

[node name="CanhaoEnemy1" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 0, 6 )
hp = 3
score = 10
scrollDown = 0.0

[node name="CanhaoEnemy2" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 0, 39 )
hp = 3
score = 10
scrollDown = 0.0


