[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/enemy/BarcoEnemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/powerups/BombPowerup.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/enemy/tankbaixo.png" type="Texture" id=3]
[ext_resource path="res://scenes/particles/explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemy/CanhaoEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/props/EnemyShot3.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource_name = "damage"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.320313, 0.320313, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "explode"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.414063, 0.414063, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 8.69703, 11.2566 )

[node name="TankEnemy" type="KinematicBody2D"]

input_pickable = false
collision_layer = 0
collision_mask = 0
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Visibility", "Z Index", "collision" ]
hp = 15
score = 50
drop = false
powerup = ExtResource( 2 )
maxVelocidade = 30
scrollDown = 20.2
tempoMov = 30
pausado = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "normal"
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Explosion" parent="AnimatedSprite" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="1"]

position = Vector2( 0.0800549, -0.363984 )
scale = Vector2( 1.10734, 1.22855 )
rect = Rect2( -10, -10, 20, 20 )

[node name="CanhaoEnemy1" parent="." index="2" instance=ExtResource( 5 )]

position = Vector2( -0.1313, -0.461798 )
hp = 21
score = 30
weapon = ExtResource( 6 )
scrollDown = 0.0
tipo = 1
shootInterval = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("../AnimatedSprite")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/damage = SubResource( 2 )
anims/explode = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Collision" type="CollisionShape2D" parent="." index="4"]

position = Vector2( 0, -0.550919 )
scale = Vector2( 1.26978, 1.10416 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


